# aector

./: Cargo.toml  README.md
examples/: large_example.rs  memory_sharing_message.rs  memory_sharing_state.rs  ping_pong.rs  testing.rs
examples/ABS_Schelling/: Cargo.toml  README.md
examples/ABS_Schelling/examples/: run_sim_with_ui.rs
examples/ABS_Schelling/src/: grid.rs  lib.rs  person.rs  protocol.rs  sim.rs  ui.rs
examples/ABS_Schelling_no_ui/: Cargo.toml  README.md
examples/ABS_Schelling_no_ui/benches/: my_benchmark.rs
examples/ABS_Schelling_no_ui/examples/: run_abs_sim.rs
examples/ABS_Schelling_no_ui/src/: grid.rs  lib.rs  person.rs  protocol.rs  sim.rs
src/: actor_system.rs  address.rs  behavior.rs  lib.rs  message.rs
src/actor/: actor.rs  actor_context.rs  backup.rs  mailbox.rs  mod.rs
src/supervision/: mod.rs  simple_restart_strategy.rs  supervision.rs
src/testing/: actor_test.rs  mod.rs
