[package]
name = "ABS_Schelling_no_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aector = {path = "../../../aector"}
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
rand_isaac = "0.3.0"

[dev-dependencies]
criterion = {version = "0.3", features = ["async_tokio"]}

[[bench]]
name = "my_benchmark"
harness = false

